--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  position: relative;
+  display: flex;
 }
 
 .App-logo {
@@ -35,4 +37,95 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.addressT1 {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 76px;
+  color: #3c424f;
+  line-height: 80px;
+  margin-bottom: 16px;
+}
+
+.addressT2 {
+  color: #686b77;
+}
+
+.addressBlock {
+  position: absolute;
+  /* right: 50%; */
+  left: -550px;
+  padding-left: 650px;
+  padding-top: 50px;
+  text-align: left;
+  width: 720px;
+  height: 100vh;
+  background-image: url('https://snazzy-maps-cdn.azureedge.net/assets/287702-the-x-spot-location-map.png?v=20191016015002');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.screen {
+  position: relative;
+}
+
+.address {
+  background-color: #c9a3a3;
+
+  /* width: 50%; */
+}
+
+.contactBlock {
+  position: absolute;
+  background-color: #58c7ff;
+  color: white;
+  left: 720px;
+  width: 720px;
+  height: 100vh;
+  text-align: left;
+  padding-left: 100px;
+  padding-top: 50px;
+}
+
+.contactT1 {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 76px;
+  line-height: 80px;
+  margin-bottom: 16px;
+}
+
+.contactT3 {
+  font-size: 28px;
+}
+
+.radio {
+  border: 0px;
+  /* width: 100%; */
+  width: 3%;
+  height: 2em;
+  padding-top: 10px;
+}
+
+.labelOption {
+  font-size: 20px;
+}
+
+.options {
+  justify-content: center;
+}
+
+.button {
+  font-family: Helvetica, Arial, sans-serif;
+  margin-top: 50px;
+  font-size: 16px;
+  background-color: #58c7ff;
+  color: #ffffffbf;
+  border: 2px solid white;
+  border-radius: 30px;
+  padding: 10px 30px;
+}
+
+.button:hover {
+  background-color: white;
+  color: #58c7ff;
 }
