--- a/src/App.css
+++ b/src/App.css
@@ -56,13 +56,14 @@
   /* right: 50%; */
   left: -550px;
   padding-left: 650px;
-  padding-top: 50px;
+  padding-top: 70px;
   text-align: left;
   width: 720px;
   height: 100vh;
   background-image: url('https://snazzy-maps-cdn.azureedge.net/assets/287702-the-x-spot-location-map.png?v=20191016015002');
   background-repeat: no-repeat;
   background-size: cover;
+  transition: 1000ms;
 }
 
 .screen {
@@ -80,11 +81,12 @@
   background-color: #58c7ff;
   color: white;
   left: 720px;
-  width: 720px;
+  width: 700px;
   height: 100vh;
   text-align: left;
   padding-left: 100px;
-  padding-top: 50px;
+  padding-top: 70px;
+  transition: 1000ms;
 }
 
 .contactT1 {
@@ -116,16 +118,97 @@
 
 .button {
   font-family: Helvetica, Arial, sans-serif;
-  margin-top: 50px;
   font-size: 16px;
   background-color: #58c7ff;
   color: #ffffffbf;
   border: 2px solid white;
   border-radius: 30px;
   padding: 10px 30px;
+  outline: none;
+  text-decoration: none;
+}
+
+.button1 {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  background-color: #58c7ff;
+  color: #ffffffbf;
+  border: 2px solid white;
+  border-radius: 30px;
+  padding: 10px 0;
+  outline: none;
+  text-decoration: none;
+}
+
+.mt50 {
+  margin-top: 50px;
+}
+
+.mt20 {
+  margin-top: 20px;
 }
 
 .button:hover {
   background-color: white;
   color: #58c7ff;
+}
+
+.success {
+  background-color: #58c7ff;
+  width: 100%;
+  height: 100vh;
+  color: white;
+}
+.center {
+  text-align: center;
+  margin: auto;
+}
+
+.successheading1 {
+  color: aliceblue;
+}
+
+.successThanks {
+  color: white;
+  font-size: 78px;
+}
+
+.successpara {
+  font-size: 32px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.successpara:hover {
+  color: green;
+}
+
+.block {
+  display: block;
+}
+
+.logo {
+  font-size: 28px;
+  padding-right: 10px;
+  color: #3c424f;
+}
+
+.address2,
+.contact2 {
+  margin-top: 70px;
+}
+
+.mail:hover {
+  text-decoration: underline;
+}
+
+.title {
+  font-size: 72px;
+}
+
+.subTitle {
+  font-size: 32px;
+}
+
+.zindex {
+  z-index: 1;
 }
